--- a/ex2/Nu_Link_Driver.ini
+++ b/ex2/Nu_Link_Driver.ini
@@ -1,9 +1,9 @@
 [Version]
 Nu_LinkVersion=V5.9
 [Process]
-ProcessID=0x00001e14
-ProcessCreationTime_L=0x95ef427c
-ProcessCreationTime_H=0x01da4b46
+ProcessID=0x000006f4
+ProcessCreationTime_L=0xccb6ecd1
+ProcessCreationTime_H=0x01da4b73
 NuLinkID=0x18000a3c
 DisableFirmwareUpdate=0
 NuLinkIDs_Count=0x00000001
