--- a/ex3/Nu_Link_Driver.ini
+++ b/ex3/Nu_Link_Driver.ini
@@ -1,13 +1,13 @@
 [Version]
 Nu_LinkVersion=V5.9
 [Process]
-ProcessID=0x00003698
-ProcessCreationTime_L=0xb00bf61d
-ProcessCreationTime_H=0x01d8c9a6
-NuLinkID=0x1800079c
+ProcessID=0x00000aa4
+ProcessCreationTime_L=0x4d98b5a9
+ProcessCreationTime_H=0x01da4b8f
+NuLinkID=0x18000a3c
 DisableFirmwareUpdate=0
 NuLinkIDs_Count=0x00000001
-NuLinkID0=0x1800079c
+NuLinkID0=0x18000a3c
 [ChipSelect]
 ;ChipName=<NUC1xx|NUC2xx|M05x|N571|N572|Nano100|N512|Mini51|NUC505|General>
 ChipName=NUC1xx
